--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   google_fonts: ^8.0.0
   glassmorphism: ^3.0.0
+  flutter_spinkit: ^5.2.2
 
 dev_dependencies:
   flutter_test:
