--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^8.0.0
   glassmorphism: ^3.0.0
   flutter_spinkit: ^5.2.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
