31-1-26 working on floor plan

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "arimo",
         "décor",
+        "Floorplan",
         "Glassmorphic",
         "glassmorphism"
     ],
