working on rent suggestion field

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "décor",
         "Floorplan",
         "Glassmorphic",
-        "glassmorphism"
+        "glassmorphism",
+        "instalments"
     ],
     "cmake.ignoreCMakeListsMissing": true
 }
