--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   glassmorphism: ^3.0.0
   flutter_spinkit: ^5.2.2
   badges: ^3.1.2
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
