--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_spinkit: ^5.2.2
   badges: ^3.1.2
   flutter_typeahead: ^5.2.0
+  http: ^1.6.0
+  fpdart: ^1.2.0
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
